--- a/smacss/module/_buttoncrear.scss
+++ b/smacss/module/_buttoncrear.scss
@@ -1,24 +1,42 @@
 .classcrear {
-    width: 1670px;
-    height: 124px;
-    border-radius: 6px;
-    border: 1px solid #E2E8F0;
+  height: 124px;
+  border-radius: 6px;
+  border: 1px solid #e2e8f0;
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.text-button {
+  color: #4f46e5;
+  font-size: 18px;
+  font-family: "Inter", sans-serif;
+  font-weight: bold;
+}
+
+.btn {
+  background-color: #4f46e5;
+  color: white;
+  padding: 12px;
+  border-radius: 1000px;
+  width: 40px;
+  height: 40px;
+  border: #4f46e5;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+@media (max-width: 767px) {
+  .classcrear {
     display: flex;
-    flex-direction: column;
-    
-    justify-content: center;
-    align-items: center;
-}
-
-.classcrear img {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    /* Ajusta el espacio entre la imagen y el texto */
-}
-
-.classcrear p {
-    color: #4F46E5;
-    font-size: 18px;
-    font-family: "Inter", sans-serif;
-    font-weight: bold;
+    flex-direction: row-reverse;
+    margin-bottom: 20px;
+  }
+  .text-button {
+    margin-right: 5px;
+  }
 }
