--- a/smacss/module/_buttoncrear.scss
+++ b/smacss/module/_buttoncrear.scss
@@ -33,10 +33,7 @@
 @media (max-width: 767px) {
   .classcrear {
     display: flex;
-    flex-direction: row-reverse;
-    margin-bottom: 20px;
-  }
-  .text-button {
-    margin-right: 5px;
+    flex-direction: row;
+    gap: 15px;
   }
 }
