--- a/smacss/module/_greeting-cards.scss
+++ b/smacss/module/_greeting-cards.scss
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  //   margin-right: 100px;
 }
 
 .card-saludo {
@@ -13,7 +12,6 @@
   height: 160px;
   border: 1px solid #ccc;
   padding: 16px 24px;
-  //   margin-left: 20px;
   border-radius: 6px;
 }
 
@@ -22,8 +20,6 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  margin-bottom: 10px;
-  /* Espacio entre encabezado y párrafo */
 }
 
 .saludo-text {
@@ -54,8 +50,7 @@
   display: flex;
   cursor: pointer;
 }
-.card-ahorro,
-.card-recibe {
+.card-ahorro {
   flex: 1;
   width: 50%;
   display: flex;
@@ -67,13 +62,7 @@
   border-radius: 6px;
 }
 
-.card-ahorro img,
-.card-recibe img {
-  margin-bottom: 10px;
-}
-
-.card-ahorro p,
-.card-recibe p {
+.card-ahorro p {
   font-family: "Inter", sans-serif;
   font-size: 14px;
   font-weight: bold;
@@ -87,11 +76,11 @@
     align-items: center;
   }
   .card-saludo {
-    width: 90%;
+    width: 100%;
     margin-bottom: 20px;
   }
   .cards {
-    width: 90%;
+    width: 100%;
     height: 120px;
     cursor: pointer;
   }
