--- a/styles.css
+++ b/styles.css
@@ -108,8 +108,6 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  margin-bottom: 10px;
-  /* Espacio entre encabezado y párrafo */
 }
 
 .saludo-text {
@@ -140,8 +138,7 @@ body {
   cursor: pointer;
 }
 
-.card-ahorro,
-.card-recibe {
+.card-ahorro {
   flex: 1;
   width: 50%;
   display: flex;
@@ -153,13 +150,7 @@ body {
   border-radius: 6px;
 }
 
-.card-ahorro img,
-.card-recibe img {
-  margin-bottom: 10px;
-}
-
-.card-ahorro p,
-.card-recibe p {
+.card-ahorro p {
   font-family: "Inter", sans-serif;
   font-size: 14px;
   font-weight: bold;
@@ -173,29 +164,28 @@ body {
     align-items: center;
   }
   .card-saludo {
-    width: 90%;
+    width: 100%;
     margin-bottom: 20px;
   }
   .cards {
-    width: 90%;
+    width: 100%;
     height: 120px;
     cursor: pointer;
   }
 }
 .sections-tarjetas {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
   justify-content: space-between;
   margin-top: 20px;
-  margin-bottom: 30px;
 }
 
 .section-tarjeta-item {
-  width: 418px;
-  height: 225px;
   border-radius: 6px;
   border: 1px solid #ccc;
   padding: 24px;
   cursor: pointer;
+  margin-bottom: 30px;
 }
 
 .tarjeta-header {
@@ -203,7 +193,6 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  margin-bottom: 10px;
 }
 
 .tarjeta-text {
@@ -251,8 +240,7 @@ body {
 
 @media (max-width: 767px) {
   .sections-tarjetas {
-    display: grid;
-    justify-content: center;
+    grid-template-columns: 100%;
   }
   .section-tarjeta-item {
     margin-bottom: 20px;
@@ -293,10 +281,7 @@ body {
 @media (max-width: 767px) {
   .classcrear {
     display: flex;
-    flex-direction: row-reverse;
-    margin-bottom: 20px;
-  }
-  .text-button {
-    margin-right: 5px;
+    flex-direction: row;
+    gap: 15px;
   }
 }/*# sourceMappingURL=styles.css.map */
